2005-03-12  Inge Wallin  <inge@lysator.liu.se>

	Remove the defaults button from the config dialog.  It wasn't
	working anyway.
	* kchartConfigDialog.cc (KChartConfigDialog): Disable the Defaults
	button.

	----------------------------------------------------------------

	Grant wish 99391: Should be possible to select linear or
	logarithmic axes.
	* kchartParameterConfigPage.h (KChartParameterConfigPage::lin and
	log): new members
	* kchartParameterConfigPage.cc (KChartParameterConfigPage): Add
	new widgets to the Settings buttonbox (used to be Title)
	(init): initialize the members from the params.
	(apply): store the parameters from the values of the widgets

	----------------------------------------------------------------

	Fix the bad layout of the title buttonbox.
	* kchartParameterConfigPage.cc (KChartParameterConfigPage): Change
	the layout slightly, and add row and col stretch.

	----------------------------------------------------------------

	Load row and column headers from XML file.
	* kchart_part.cc (loadXML): Get the legend and axis label strings
	from the KDChart parameters and store in the column and row
	headers.

	Lots of code cleaning and added comments.

	----------------------------------------------------------------

	Clean up the data editor and remove old cruft.
	* kchartDataEditor.{h,cc}: Remove all #if 0:ed code.
	* Makefile.am (libkchartpart_la_SOURCES): Removed parser.cc,
	sheet.cc, sheetdlg.cc, table.cc qttableview.cpp
	(noinst_HEADERS): Removed parser.h sheet.h sheetdlg.h table.h
	qttableview.h 
	Files mentioned above: Removed.

2005-03-11  Inge Wallin  <inge@lysator.liu.se>

	Move Tooltips and Whatsthis help from the old data editor to the
	new one.
	* kchartDataEditor.cc (addDocs): New method
	(constructor): Clean up by moving all help generation to addDocs().

	----------------------------------------------------------------

	Enable "Finish" button for all pages in the wizard.